--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main class="container">
     <header class="header-img">
-      <img class="picture-header" src="images/illustration-hero.svg" alt="girl listenint to music">
+      <img class="picture-header" src="illustration-hero.svg" alt="girl listening to music">
     </header>
     <div class="order-content">
       <div class="order-summary">
@@ -25,7 +25,7 @@
       </div>
       <div class="plans">
         <div class="plan-picture">
-          <img src="images/icon-music.svg" alt="music icon">
+          <img src="icon-music.svg" alt="music icon">
         </div>
         <div class="plan-info">
           <div class="plan-type">Annual Plan</div>
