--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <main class="container">
     <header class="header-img">
-      <img class="picture-header" src="illustration-hero.svg" alt="girl listening to music">
+      <img class="picture-header" src="images/illustration-hero.svg" alt="girl listenint to music">
     </header>
     <div class="order-content">
       <div class="order-summary">
@@ -25,7 +25,7 @@
       </div>
       <div class="plans">
         <div class="plan-picture">
-          <img src="icon-music.svg" alt="music icon">
+          <img src="images/icon-music.svg" alt="music icon">
         </div>
         <div class="plan-info">
           <div class="plan-type">Annual Plan</div>
